# try_manager

./: LICENSE  README.md  pyproject.toml
src/try_manager/: try_manager.py
src/try_manager_DanyaSh/: try_manager.py
