[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "try_manager_DanyaSh"
version = "0.0.1"
authors = [
  { name="DanyaSh", email="danilashundeev@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DanyaSh/try_manager"
"Bug Tracker" = "https://github.com/DanyaSh/try_manager/issues"